tests/functional2/lang/line_endings/depr.err.exp
warning: CR (`\r`) and CRLF (`\r\n`) line endings are not supported. Please inspect the file and normalize it to use LF (`\n`) line endings instead. Use --extra-deprecated-features cr-line-endings to silence this warning.
         at /pwd/in.nix:7:21:
              6|   x =
              7|   # Dit is een test.
               |                     ^
              8| y;
error: CR (`\r`) and CRLF (`\r\n`) line endings are not supported. Please inspect the file and normalize it to use LF (`\n`) line endings instead. Use --extra-deprecated-features cr-line-endings to silence this warning.
       at /pwd/in.nix:14:15:
           13|   # translated to LF.
           14|   foo = "multi
             |               ^
           15| line
